#ifndef BREWCONTROLLER_H
#define BREWCONTROLLER_H

#include "CoffeeItem.h"

// Mostly just a Pseudo class.

class BrewController
{
public:
    BrewController();
    void Brew(const CoffeeItem coffee); // Pseudocode
};

#endif // BREWCONTROLLER_H
